# byte-sleuth

./: .gitignore  README.md  README_pt-BR.md  pyproject.toml
.github/workflows/: publish-vscode-extension.yml  publish.yml  release-orchestrator.yml  release-unified.yml  release.yml
byte_sleuth/: __init__.py  byte_sleuth.txt
docs/: README_pt-BR.md
docs/assets/: icon.json
examples/: simple_scan.py  test_file.txt
examples/example_1/: simple_scan.py
examples/example_2/: precommit_scan.py
examples/real_world_examples/bad_data_file/: read_json_error.py  test_json_with_invisible.json
examples/real_world_examples/cant_run_shellscript/: test_file_with_code.sh
examples/real_world_examples/code_with_bidi_override/: test_code_bidi.py
examples/real_world_examples/json_with_invisible_unicode/: test_json_sanitization.py
examples/real_world_examples/log_with_hidden_controls/: test_log_sanitization.py
examples/real_world_examples/sql_injection_hidden_unicode/: test_sql_injection.py
src/: __init__.py  byte_sleuth.py  character_scanner.py
vscode-extension/: .vscodeignore  README.md  extension.js  package-lock.json  package.json
