[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/byte_sleuth"]
include = ["src/byte_sleuth"]

[tool.hatch.version]
path = "src/byte_sleuth/__init__.py"
version = { format = "patch" }

[tool.hatch.envs]
test = { test = "pytest" }
lint = { lint = "flake8" }
docs = { docs = "mkdocs serve" }

coverage = { coverage = "coverage run -m pytest" }
coverage-report = { coverage-report = "coverage report" }
coverage-html = { coverage-html = "coverage html" }
coverage-xml = { coverage-xml = "coverage xml" }
coverage-html-report = { coverage-html-report = "coverage html" }

[project]
name = "byte-sleuth"
version = "1.0.0"
requires-python = ">=3.7"
authors = [
  { name = "Rafael Mori", email = "faelmori@gmail.com" }
]
maintainers = [
  { name = "Rafael Mori", email = "faelmori@gmail.com" }
]
description = "A Python package for detecting hidden Unicode and ASCII characters."
readme = "README.md"
license = { text = "MIT" }
keywords = ["unicode", "ascii", "security", "data validation", "text analysis", "logging"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
  "Operating System :: OS Independent"
]

dependencies = [
  "rich>=13.3.5",
  "pytest",
  "flake8"
]

[project.optional-dependencies]
dev = ["black", "mypy"]
test = ["pytest"]
docs = ["mkdocs"]

[project.urls]
Homepage = "https://github.com/faelmori/byte-sleuth"
Documentation = "https://github.com/faelmori/byte-sleuth/docs"
Repository = "https://github.com/faelmori/byte-sleuth"
"Bug Tracker" = "https://github.com/faelmori/byte-sleuth/issues"

[project.scripts]
byte-sleuth-cli = "byte_sleuth.cli:main"
